syntax = "proto3";

package auth;

option go_package = "jwtgo/internal/auth;auth";

service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc SignOut (SignOutRequest) returns (SignOutResponse);
  rpc Refresh (RefreshRequest) returns (RefreshResponse);
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  string message = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string access_token = 1;
  string refresh_token = 2;
  string message = 3;
}

message SignOutRequest {
  string access_token = 1;
}

message SignOutResponse {
  string message = 1;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
  string message = 3;
}
